--- a/Aula - 01/index.html
+++ b/Aula - 01/index.html
@@ -10,5 +10,20 @@
    <p>A aula de construção de software para web é muito boa.</p> 
    <p>Estou aprendendo bastante sobre HTML.</p> 
     <p>Obrigado, professor!</p>
+    <h1>&rarr;Minha Primeira Página HTML&larr;</h1>
+    <br>
+    <br>
+    <br>
+    <h2>&rarr;&rarr;Este é o título secundário da minha página&larr;&larr;</h2>
+    <br>
+    <br>
+    <br>
+    <h3>&rarr;&rarr;&rarr;Este é o título terciário da minha página&larr;&larr;&larr;</h3>
+    <br>
+    <br>
+    <p>
+Estes são os sinais de maior e menor usando simbolos de escape: &lt; e &gt; respectivamente.
+    </p>
+<p>&#x2764  </p>
 </body>
 </html>
