--- a/Aula - 01/index.html
+++ b/Aula - 01/index.html
@@ -24,6 +24,13 @@
     <p>
 Estes são os sinais de maior e menor usando simbolos de escape: &lt; e &gt; respectivamente.
     </p>
-<p>&#x2764  </p>
+    <br>
+    <p>&#127769;&#128690;&#128073;&#128072;&#128125; 1 E.T - O Extraterrestre </p>
+    <p>&#128116;&#128141;&#128141;&#128141; 2 Senhor dos Aneis
+    <p>&#127757;&#128053;&#128018;&#128584;&#128585;&#128586; 3 Planeta dos macacos</p>
+    <p>&#128520;&#128096;&#128092;&#128087; 4 O diabo veste Prada</p>
+    <p>&#128104;&#128073;&#127867;&#10060;&#x1F470; 5 Se beber não case
+    </p>
+</p>
 </body>
 </html>
