--- a/Aula - 01/index.html
+++ b/Aula - 01/index.html
@@ -25,11 +25,23 @@
 Estes são os sinais de maior e menor usando simbolos de escape: &lt; e &gt; respectivamente.
     </p>
     <br>
+    <h1>DESAFIO DOS EMOJIS</h1>
     <p>&#127769;&#128690;&#128073;&#128072;&#128125; 1 E.T - O Extraterrestre </p>
     <p>&#128116;&#128141;&#128141;&#128141; 2 Senhor dos Aneis
     <p>&#127757;&#128053;&#128018;&#128584;&#128585;&#128586; 3 Planeta dos macacos</p>
     <p>&#128520;&#128096;&#128092;&#128087; 4 O diabo veste Prada</p>
     <p>&#128104;&#128073;&#127867;&#10060;&#x1F470; 5 Se beber não case
+    <br>
+    <br>
+    <h1>DESAFIO DAS MENSAGENS</h1>
+    <p>*Primeiro Parágrafo</p>
+    <p>&nbsp;**Segundo Parágrafo</p>
+    <p>&nbsp;&nbsp;***Terceiro Parágrafo</p>
+    <br>
+    <br>
+      <p>&nbsp;&nbsp;***Terceiro Parágrafo</p>
+      <p>&nbsp;**Segundo Parágrafo</p>
+      <p>*Primeiro Parágrafo</p>
     </p>
 </p>
 </body>
